WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
140990
Fix small leak in Collator
https://bugs.webkit.org/show_bug.cgi?id=140990
Summary
Fix small leak in Collator
Darin Adler
Reported
2015-01-27 23:55:41 PST
Fix small leak in Collator
Attachments
Patch
(2.24 KB, patch)
2015-01-27 23:56 PST
,
Darin Adler
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Adler
Comment 1
2015-01-27 23:56:19 PST
Created
attachment 245519
[details]
Patch
Andreas Kling
Comment 2
2015-01-28 00:00:07 PST
Comment on
attachment 245519
[details]
Patch r=me
WebKit Commit Bot
Comment 3
2015-01-28 00:44:29 PST
Comment on
attachment 245519
[details]
Patch Clearing flags on attachment: 245519 Committed
r179245
: <
http://trac.webkit.org/changeset/179245
>
WebKit Commit Bot
Comment 4
2015-01-28 00:44:32 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug