Fix small leak in Collator https://bugs.webkit.org/show_bug.cgi?id=140990

Reviewed by Andreas Kling.

* wtf/unicode/icu/CollatorICU.cpp:
(WTF::Collator::Collator): Use fastStrDup instead of strdup.
(WTF::Collator::~Collator): Use fastFree on the collator locale that we
are abandoning. The old code instead just called free on a null pointer.


Canonical link: https://commits.webkit.org/158971@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@179245 268f45cc-cd09-0410-ab3c-d52691b4dbfc